😇👖 Checkpoint ./index.js:13117774/118 ./config.json:13117774/71 ./config.js:13117774/315 ./ayarlar.json:13117774/27

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "prefix" : "PREFİX",
-    "Token" : "TOKEN"
+    "prefix" : "!",
+    "Token" : "NzU0MDQxNDUwNTU0OTgyNTUw.X1u90w.lANUOzmIPn67OHktT118UbdAqrY"
   }
