--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "xml2js": "^0.4.22",
     "xmlhttprequest": "^1.8.0",
     "yodasay": "^1.1.9",
-    "ytdl-core": "^1.0.3"
+    "ytdl-core": "^1.0.3",
+    "ms": "^2.1.3"
   },
   "engines": {
     "node": "10.x"
